# mmux-bash-libc-mathematics

./: .gitignore  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac  configure.sh  gdbinit
doc/: macros.texi  mmux-bash-libc-mathematics.texi
meta/autoconf/: cclibraries.m4  mmux-autoconf-enable-option.m4  mmux-core.m4
meta/m4/: libmmux-bash-builtins.m4
meta/scripts/: mmux-bash-libc-mathematics.pc.in
meta/slackware/: slack-desc.in
src/: libmmux-bash-libc-mathematics.bash  libmmux-bash-libc-mathematics.bash.in  mmux-bash-libc-mathematics-arithmetics.c  mmux-bash-libc-mathematics-arithmetics.c.m4  mmux-bash-libc-mathematics-comparison.c.m4  mmux-bash-libc-mathematics-complex.c.m4  mmux-bash-libc-mathematics-exponentiation.c.m4  mmux-bash-libc-mathematics-hyperbolic.c.m4  mmux-bash-libc-mathematics-internals.h  mmux-bash-libc-mathematics-library.c  mmux-bash-libc-mathematics-predicates.c.m4  mmux-bash-libc-mathematics-sorting.c.m4  mmux-bash-libc-mathematics-trigonometric.c  mmux-bash-libc-mathematics-trigonometric.c.m4  mmux-bash-libc-mathematics.h  mmux-bash-libc-mathematics.m4
tests/: arithmetics.bash  arithmetics.test.m4  comparison.test.m4  complex.test.m4  exponentiation.test.m4  format.test.m4  hyperbolic.test.m4  predicates.test.m4  sorting.test.m4  trigonometric.bash  trigonometric.test.m4  version.test.m4
